--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ Date created: February 18, 2022
 
 body {
   background-color: #fef9ff;
-  font-family: arial; helvetica, sans-serif;
+  font-family: arial, helvetica, sans-serif;
   color: #0d1f2d;
   max-width: 900px;
   margin: 0 auto;
